Change NS in oss-argocd-config.yaml
Signed-off-by: Austin Lee <haulrest@gmail.com>

--- a/argocd/applications/oss-argocd-config.yaml
+++ b/argocd/applications/oss-argocd-config.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: oss-argocd-config-application
-  namespace: argocd
+  namespace: argo-project
 spec:
   project: default
   source:
