Change invalid NS name

--- a/charts/oss-argocd/resources/appproject-home-server.yaml
+++ b/charts/oss-argocd/resources/appproject-home-server.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: home-server
-  namespace: argocd
+  namespace: argo-project
 spec:
   description: Project for home server K8s. (Using my Mac mini)
   destinations:
