--- a/charts/oss-argocd/resources/appproject-vultr.yaml
+++ b/charts/oss-argocd/resources/appproject-vultr.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: cloud
-  namespace: argocd
+  namespace: argo-project
 spec:
   description: Project for Cloud K8s. (AWS, Azure, or any other cloud)
   destinations:
