--- a/argocd/applicationsets/app-clustersecrets.yaml
+++ b/argocd/applicationsets/app-clustersecrets.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: app-clustersecrets-applicationset
-  namespace: argocd
+  namespace: argo-project
 spec:
   generators:
     - list:
