Change ClusterSecretStore name

--- a/charts/app-clustersecrets/resources/ghcr-secret.yaml
+++ b/charts/app-clustersecrets/resources/ghcr-secret.yaml
@@ -13,7 +13,7 @@ spec:
 
   externalSecretSpec:
     secretStoreRef:
-      name: gitlab-secret-store
+      name: gitlab-clustersecretstore
       kind: ClusterSecretStore
 
     refreshInterval: "1h"
