--- a/charts/oss-cert-manager/resources/route53-secret.yaml
+++ b/charts/oss-cert-manager/resources/route53-secret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: "1h"
   secretStoreRef:
-    name: gitlab-secret-store
+    name: gitlab-clustersecretstore
     kind: ClusterSecretStore
   target:
     name: route53-secret
