--- a/charts/oss-external-dns/resources/aws-secret.yaml
+++ b/charts/oss-external-dns/resources/aws-secret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: "1h"
   secretStoreRef:
-    name: gitlab-secret-store
+    name: gitlab-clustersecretstore
     kind: ClusterSecretStore
   target:
     name: external-dns-aws-credentials
