--- a/argocd/applicationsets/oss-external-dns.yaml
+++ b/argocd/applicationsets/oss-external-dns.yaml
@@ -29,6 +29,9 @@ spec:
               - $values/charts/oss-external-dns/values/values-{{ .name }}.yaml
         - repoURL: https://github.com/BeaverHouse/hybrid-cicd.git
           targetRevision: main
+          path: charts/oss-external-dns/resources
+        - repoURL: https://github.com/BeaverHouse/hybrid-cicd.git
+          targetRevision: main
           path: charts/oss-external-dns
           ref: values
       syncPolicy:
