Add MCP port configuration

--- a/backend-template/templates/deployment.yaml
+++ b/backend-template/templates/deployment.yaml
@@ -41,9 +41,14 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
-              containerPort: {{ .Values.service.port }}
+            - name: api
+              containerPort: {{ .Values.service.api.port }}
               protocol: TCP
+            {{- if .Values.service.mcp.enabled }}
+            - name: mcp
+              containerPort: {{ .Values.service.mcp.port }}
+              protocol: TCP
+            {{- end }}
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
