--- a/backend-template/templates/ingress.yaml
+++ b/backend-template/templates/ingress.yaml
@@ -37,7 +37,7 @@ spec:
               service:
                 name: {{ include "backend-template.fullname" $ }}
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ $.Values.service.api.port }}
           {{- end }}
     {{- end }}
 {{- end }}
