--- a/backend-template/values.yaml
+++ b/backend-template/values.yaml
@@ -53,8 +53,13 @@ securityContext: {}
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
-  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 80
+  # API port configuration (exposed via ingress)
+  api:
+    port: 80
+  # MCP port configuration (internal only)
+  mcp:
+    enabled: false
+    port: 3000
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
@@ -89,11 +94,11 @@ resources: {}
 livenessProbe:
   httpGet:
     path: /
-    port: http
+    port: api
 readinessProbe:
   httpGet:
     path: /
-    port: http
+    port: api
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
