--- a/backend-template/Chart.yaml
+++ b/backend-template/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: backend-template
-description: A Helm chart for Kubernetes
+name: <CHARTNAME>
+description: Austin Lee's backend service with dual-port support (API + MCP)
 
 # A chart can be either an 'application' or a 'library' chart.
 #
