--- a/backend-template/templates/externalsecret.yaml
+++ b/backend-template/templates/externalsecret.yaml
@@ -2,17 +2,17 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: {{ include "backend-template.fullname" . }}-external-secret
+  name: {{ include "<CHARTNAME>.fullname" . }}-external-secret
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "backend-template.labels" . | nindent 4 }}
+    {{- include "<CHARTNAME>.labels" . | nindent 4 }}
 spec:
   refreshInterval: "1h"
   secretStoreRef:
     name: gitlab-clustersecretstore
     kind: ClusterSecretStore
   target:
-    name: {{ include "backend-template.fullname" . }}-secret
+    name: {{ include "<CHARTNAME>.fullname" . }}-secret
     creationPolicy: Owner
   data:
     {{- range .Values.externalSecret.data }}
