--- a/backend-template/templates/hpa.yaml
+++ b/backend-template/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "backend-template.fullname" . }}
+  name: {{ include "<CHARTNAME>.fullname" . }}
   labels:
-    {{- include "backend-template.labels" . | nindent 4 }}
+    {{- include "<CHARTNAME>.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "backend-template.fullname" . }}
+    name: {{ include "<CHARTNAME>.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
