--- a/backend-template/templates/service.yaml
+++ b/backend-template/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "backend-template.fullname" . }}
+  name: {{ include "<CHARTNAME>.fullname" . }}
   labels:
-    {{- include "backend-template.labels" . | nindent 4 }}
+    {{- include "<CHARTNAME>.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -18,4 +18,4 @@ spec:
       name: mcp
     {{- end }}
   selector:
-    {{- include "backend-template.selectorLabels" . | nindent 4 }}
+    {{- include "<CHARTNAME>.selectorLabels" . | nindent 4 }}
