--- a/backend-template/templates/serviceaccount.yaml
+++ b/backend-template/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "backend-template.serviceAccountName" . }}
+  name: {{ include "<CHARTNAME>.serviceAccountName" . }}
   labels:
-    {{- include "backend-template.labels" . | nindent 4 }}
+    {{- include "<CHARTNAME>.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
