--- a/charts/app-legacy-backends/values/file.yaml
+++ b/charts/app-legacy-backends/values/file.yaml
@@ -66,6 +66,25 @@ externalSecret:
       remoteRef:
         key: "LEGACY_API_KEY"
 
+# Ingress configuration (without external-dns annotation to avoid conflicts)
+ingress:
+  enabled: true
+  className: "nginx"
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
+  hosts:
+    - host: v1-test.haulrest.me
+      paths:
+        - path: /file
+          pathType: Prefix
+  tls:
+    - secretName: file-server-tls
+      hosts:
+        - v1-test.haulrest.me
+
 # Custom deployment configuration for environment variables
 envFrom:
   - secretRef:
