--- a/argocd/applicationsets/app-clustersecrets.yaml
+++ b/argocd/applicationsets/app-clustersecrets.yaml
@@ -11,15 +11,15 @@ spec:
             project: cloud
   template:
     metadata:
-      name: "{{cluster}}-app-clustersecrets"
+      name: "{{ .cluster }}-app-clustersecrets"
     spec:
-      project: "{{project}}"
+      project: "{{ .project }}"
       source:
         repoURL: https://github.com/BeaverHouse/hybrid-cicd.git
         targetRevision: main
         path: charts/app-clustersecrets/resources
       destination:
-        name: "{{cluster}}"
+        name: "{{ .cluster }}"
       syncPolicy:
         automated:
           prune: true
