--- a/argocd/applicationsets/app-clustersecrets.yaml
+++ b/argocd/applicationsets/app-clustersecrets.yaml
@@ -7,11 +7,12 @@ spec:
   generators:
     - list:
         elements:
-          - cluster: cloud-k8s
+          - name: cloud
             project: cloud
+            cluster: cloud-k8s
   template:
     metadata:
-      name: "{{ .cluster }}-app-clustersecrets"
+      name: "{{ .name }}-app-clustersecrets"
     spec:
       project: "{{ .project }}"
       source:
