--- a/argocd/applicationsets/app-clustersecrets.yaml
+++ b/argocd/applicationsets/app-clustersecrets.yaml
@@ -4,6 +4,8 @@ metadata:
   name: app-clustersecrets-applicationset
   namespace: argo-project
 spec:
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
   generators:
     - list:
         elements:
