--- a/argocd/applicationsets/app-legacy-backends.yaml
+++ b/argocd/applicationsets/app-legacy-backends.yaml
@@ -4,24 +4,28 @@ metadata:
   name: app-legacy-backends
   namespace: argo-project
 spec:
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
   generators:
     - list:
         elements:
           - name: aecheck-backend
+            project: cloud
             valuesFile: aecheck.yaml
             cluster: cloud-k8s
           - name: file-server
+            project: cloud
             valuesFile: file.yaml
             cluster: cloud-k8s
   template:
     metadata:
-      name: "{{ .name }}"
+      name: "{{ .name }}-legacy"
       labels:
         app.kubernetes.io/name: "{{ .name }}"
         custom-image: "true"
         app.kubernetes.io/part-of: legacy-backends
     spec:
-      project: home-server
+      project: "{{ .project }}"
       source:
         repoURL: https://github.com/AustinLee/hybrid-k8s-docker-helm
         targetRevision: HEAD
