--- a/argocd/applicationsets/app-legacy-backends.yaml
+++ b/argocd/applicationsets/app-legacy-backends.yaml
@@ -27,8 +27,8 @@ spec:
     spec:
       project: "{{ .project }}"
       source:
-        repoURL: https://github.com/AustinLee/hybrid-k8s-docker-helm
-        targetRevision: HEAD
+        repoURL: https://github.com/BeaverHouse/hybrid-cicd.git
+        targetRevision: main
         path: charts/app-legacy-backends
         helm:
           valueFiles:
