--- a/argocd/applicationsets/app-legacy-backends.yaml
+++ b/argocd/applicationsets/app-legacy-backends.yaml
@@ -40,4 +40,5 @@ spec:
         automated:
           prune: true
           selfHeal: true
-        # Not creating namespace, because it is already created by the cluster.
+        syncOptions:
+          - CreateNamespace=true
