--- a/charts/app-legacy-backends/values/aecheck.yaml
+++ b/charts/app-legacy-backends/values/aecheck.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/beaverhouse/aecheck-backend
   pullPolicy: IfNotPresent
-  tag: "sha-65ccc1a"
+  tag: "1.0.0-final"
 
 imagePullSecrets:
   - name: ghcr-secret
