--- a/charts/app-legacy-backends/values/file.yaml
+++ b/charts/app-legacy-backends/values/file.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/beaverhouse/file-server-rust
   pullPolicy: IfNotPresent
-  tag: "sha-38d6be8"
+  tag: "1.0.0-final"
 
 imagePullSecrets:
   - name: ghcr-secret
