--- a/charts/app-legacy-backends/values/file.yaml
+++ b/charts/app-legacy-backends/values/file.yaml
@@ -76,14 +76,14 @@ ingress:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
   hosts:
-    - host: v1-test.haulrest.me
+    - host: v1.api.haulrest.me
       paths:
         - path: /file
           pathType: Prefix
   tls:
     - secretName: file-server-tls
       hosts:
-        - v1-test.haulrest.me
+        - v1.api.haulrest.me
 
 # Custom deployment configuration for environment variables
 envFrom:
