--- a/charts/app-legacy-backends/values/aecheck.yaml
+++ b/charts/app-legacy-backends/values/aecheck.yaml
@@ -75,7 +75,7 @@ ingress:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
-    # external-dns.alpha.kubernetes.io/hostname: "v1.api.haulrest.me"
+    external-dns.alpha.kubernetes.io/hostname: "v1.api.haulrest.me"
   hosts:
     - host: v1.api.haulrest.me
       paths:
