--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ env.ORGANIZATION }}/${{ inputs.repository }}
+          token: ${{ secrets.GH_PAT_ORGANIZATION }}
       
       - name: Get short commit SHA
         id: commit-sha
@@ -41,6 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ env.ORGANIZATION }}/${{ inputs.repository }}
+          token: ${{ secrets.GH_PAT_ORGANIZATION }}
 
       - name: Log in to Container Registry
         uses: docker/login-action@v3
@@ -68,6 +70,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ env.ORGANIZATION }}/${{ inputs.repository }}
+          token: ${{ secrets.GH_PAT_ORGANIZATION }}
 
       - name: Log in to Container Registry
         uses: docker/login-action@v3
