--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -88,7 +88,7 @@ jobs:
 
   create-manifest:
     runs-on: ubuntu-latest
-    needs: [build-amd64, build-arm64]
+    needs: [generate-sha, build-amd64, build-arm64]
     permissions:
       contents: read
       packages: write
