--- a/charts/app-tiny-clover/values/file-manager.yaml
+++ b/charts/app-tiny-clover/values/file-manager.yaml
@@ -52,15 +52,24 @@ externalSecret:
     - secretKey: "POSTGRES_HOST"
       remoteRef:
         key: "SUPABASE_POSTGRES_HOST"
-    - secretKey: "POSTGRES_PORT"
-      remoteRef:
-        key: "SUPABASE_POSTGRES_PORT"
     - secretKey: "POSTGRES_USER"
       remoteRef:
         key: "SUPABASE_POSTGRES_USER"
     - secretKey: "POSTGRES_PASSWORD"
       remoteRef:
         key: "SUPABASE_POSTGRES_PASSWORD"
+    - secretKey: "S3_ENDPOINT"
+      remoteRef:
+        key: "SUPABASE_PUBLIC_S3_ENDPOINT"
+    - secretKey: "S3_ACCESS_KEY"
+      remoteRef:
+        key: "SUPABASE_PUBLIC_S3_ACCESS_KEY"
+    - secretKey: "S3_SECRET_KEY"
+      remoteRef:
+        key: "SUPABASE_PUBLIC_S3_SECRET_KEY"
+    - secretKey: "S3_BUCKET_NAME"
+      remoteRef:
+        key: "SUPABASE_PUBLIC_S3_BUCKET_NAME"
 
 # Ingress configuration
 ingress:
