--- a/charts/oss-cert-manager/resources/cluster-issuer.yaml
+++ b/charts/oss-cert-manager/resources/cluster-issuer.yaml
@@ -10,6 +10,7 @@ spec:
       name: letsencrypt-private-key
     solvers:
       - dns01:
+          cnameStrategy: Follow
           route53:
             region: ap-northeast-2
             accessKeyIDSecretRef:
