--- a/argocd/applicationsets/oss-cert-manager.yaml
+++ b/argocd/applicationsets/oss-cert-manager.yaml
@@ -28,6 +28,8 @@ spec:
             parameters:
               - name: crds.enabled
                 value: "true"
+              - name: extraArgs
+                value: "{--dns01-recursive-nameservers-only,--dns01-recursive-nameservers=8.8.8.8:53\\,1.1.1.1:53}"
         - repoURL: https://github.com/BeaverHouse/hybrid-cicd.git
           targetRevision: main
           path: charts/oss-cert-manager/resources
