--- a/charts/oss-cert-manager/resources/cluster-issuer.yaml
+++ b/charts/oss-cert-manager/resources/cluster-issuer.yaml
@@ -1,40 +1,18 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-haulrest-me-issuer
+  name: letsencrypt-cluster-issuer
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: haulrest@gmail.com
     privateKeySecretRef:
-      name: letsencrypt-haulrest-me-private-key
+      name: letsencrypt-private-key
     solvers:
       - dns01:
+          cnameStrategy: Follow
           route53:
             region: ap-northeast-2
-            hostedZoneID: "Z04780313RCZFI12Y6VOR" # Zone ID for haulrest.me: not considered as secret
-            accessKeyIDSecretRef:
-              name: route53-secret
-              key: AWS_ACCESS_KEY_ID_DNS
-            secretAccessKeySecretRef:
-              name: route53-secret
-              key: AWS_SECRET_ACCESS_KEY_DNS
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-tinyclover-issuer
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: haulrest@gmail.com
-    privateKeySecretRef:
-      name: letsencrypt-tinyclover-private-key
-    solvers:
-      - dns01:
-          route53:
-            region: ap-northeast-2
-            hostedZoneID: "Z05958372JHMLAS95OTEK" # Zone ID for tinyclover.com: not considered as secret
             accessKeyIDSecretRef:
               name: route53-secret
               key: AWS_ACCESS_KEY_ID_DNS
