--- a/charts/app-tiny-clover/values/smart-manager.yaml
+++ b/charts/app-tiny-clover/values/smart-manager.yaml
@@ -91,3 +91,5 @@ envFrom:
 extraEnv:
   - name: GO_ENV
     value: "production"
+  - name: MCP_BASE_URL
+    value: "http://smart-manager.tiny-clover.svc.cluster.local:8103/smart-manager/v1"
