--- a/argocd/applicationsets/app-tiny-clover.yaml
+++ b/argocd/applicationsets/app-tiny-clover.yaml
@@ -9,37 +9,34 @@ spec:
   generators:
     - list:
         elements:
-          - name: file-manager
+          - name: cloud-k8s
             project: cloud
-            valuesFile: file-manager.yaml
+            valuesFile: cloud-k8s.yaml
             cluster: cloud-k8s
-          - name: smart-manager
+          - name: oke
             project: cloud
-            valuesFile: smart-manager.yaml
-            cluster: cloud-k8s
-          - name: search-manager
-            project: cloud
-            valuesFile: search-manager.yaml
-            cluster: cloud-k8s
-          - name: llm-client
-            project: cloud
-            valuesFile: llm-client.yaml
-            cluster: cloud-k8s
+            valuesFile: oke.yaml
+            cluster: oke
   template:
     metadata:
       name: "tiny-clover-{{ .name }}"
       labels:
-        app.kubernetes.io/name: "{{ .name }}"
+        app.kubernetes.io/name: "tiny-clover"
         app.kubernetes.io/part-of: tiny-clover
+        app.kubernetes.io/cluster: "{{ .name }}"
     spec:
       project: "{{ .project }}"
       source:
         repoURL: https://github.com/BeaverHouse/hybrid-cicd.git
         targetRevision: main
-        path: charts/app-tiny-clover
+        path: charts/app-tiny-clover-umbrella
         helm:
           valueFiles:
             - values/{{ .valuesFile }}
+            - ../app-tiny-clover/values/file-manager.yaml
+            - ../app-tiny-clover/values/llm-client.yaml
+            - ../app-tiny-clover/values/search-manager.yaml
+            - ../app-tiny-clover/values/smart-manager.yaml
       destination:
         name: "{{ .cluster }}"
         namespace: tiny-clover
