--- a/argocd/applicationsets/app-clustersecrets.yaml
+++ b/argocd/applicationsets/app-clustersecrets.yaml
@@ -12,6 +12,9 @@ spec:
           - name: cloud
             project: cloud
             cluster: cloud-k8s
+          - name: oke
+            project: cloud
+            cluster: oke
   template:
     metadata:
       name: "{{ .name }}-app-clustersecrets"
