--- a/argocd/applicationsets/oss-external-dns.yaml
+++ b/argocd/applicationsets/oss-external-dns.yaml
@@ -11,6 +11,9 @@ spec:
           - name: cloud
             project: cloud
             cluster: cloud-k8s
+          - name: oke
+            project: cloud
+            cluster: oke
   template:
     metadata:
       name: "oss-external-dns-{{ .name }}"
